--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 .header {
 	background-color: #2579f2;
-	height: 165px;
+	height: 217px;
 }
 
 .header__instruct {
@@ -244,20 +244,14 @@ body {
 	color: #fff;
 }
 
-/* container */
-.container {
-	padding-right: 0 !important;
-    padding-left: 0	!important;
-    margin-right: 0	!important;
-    margin-left: 0	!important;
-}
+
 /* category */
 .category {
 	display: flex;
-	height: 52px;
-	margin: 0 160px;
+	padding: 0 160px;
 	justify-content: space-between;
 	align-items: center	;
+	background-color: #fff;
 }
 
 .category__list {
@@ -309,6 +303,15 @@ body {
 	font-weight: 600;
 	color: black;
 }
+
+/* container */
+.container {
+	padding-right: 0 !important;
+    padding-left: 0	!important;
+    margin-right: 0	!important;
+    margin-left: 0	!important;
+}
+
 /* product */
 .product {
 	display: block;
@@ -971,7 +974,6 @@ body {
  .footer__social {
 	display: block;
 	margin: 20px 160px;
-	border-bottom: #dde0e4 solid 1px;
  }
 
 .footer__social-list {
