--- a/product.css
+++ b/product.css
@@ -33,7 +33,7 @@
 .product__cont-title {
     font-size: 2.6rem;
     font-weight: 600;
-    margin: 10px 0;
+    margin: 0 0 10px 0;
 }
 
 .product__cont-status {
